--- a/_posts/2015-10-15-Lajas.markdown
+++ b/_posts/2015-10-15-Lajas.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Lajas"
+title:  "Barrio-Palmarejo, Lajas"
 date:   2015-10-15 15:39:40
 preview: /Propiedades/venta/Lajas/IMG_2368.JPG
 ---
@@ -63,4 +63,4 @@ preview: /Propiedades/venta/Lajas/IMG_2368.JPG
 	</script>
 </center>
 
-
+GANGAA!! Se vende o se alquila super espacioso local que consta de 1,611 pies cuadrados de construcción, amplio estacionamiento enfrente, perfecto para iniciar su negocio y/o continuarlo aumentando sus ventas al mejorar su localización. El local está ubicado en PR-303 Km. 3.2 Bo. Palmarejo, calle 97 Violeta Comunidad Olivares, Lajas. Llama Hoy! Edgar Acosta 787-645-2084
