added al properties of clasificados and implemented price

--- a/_posts/2015-10-15-Lajas.markdown
+++ b/_posts/2015-10-15-Lajas.markdown
@@ -63,4 +63,6 @@ preview: /Propiedades/venta/Lajas/IMG_2368.JPG
 	</script>
 </center>
 
+<center><h2>$55,000</h2></center>
+
 GANGAA!! Se vende o se alquila super espacioso local que consta de 1,611 pies cuadrados de construcción, amplio estacionamiento enfrente, perfecto para iniciar su negocio y/o continuarlo aumentando sus ventas al mejorar su localización. El local está ubicado en PR-303 Km. 3.2 Bo. Palmarejo, calle 97 Violeta Comunidad Olivares, Lajas. Llama Hoy! Edgar Acosta 787-645-2084
