--- a/_posts/2015-10-19-Los Pinos.markdown
+++ b/_posts/2015-10-19-Los Pinos.markdown
@@ -88,4 +88,6 @@ preview: /Propiedades/venta/Los Pinos/IMG_6682.JPG
 	</script>
 </center>
 
+<center><h2>$370,000</h2></center>
+
 Tremendo apartamento en zona turística de playa. 3H-2B, Se entrega semi-amueblado, 100% remodelado, 2 estacionamientos, control de acceso, piscina, gacebo, área recreativa.Frente al Hotel San Juan y Ave. Isla Verde . Llama hoy! Edgar Acosta 787-645-2084
