--- a/_posts/2015-10-24-Salinas.markdown
+++ b/_posts/2015-10-24-Salinas.markdown
@@ -28,4 +28,6 @@ preview: /Propiedades/venta/Salinas/1.jpg
 	</script>
 </center>
 
+<center><h2>$165,000</h2></center>
+
 Se liquida, 50 cuerdas de terreno ideal para desarrollo (antes contaba con permisología de uso) Tiene una casa pequeña de 2 habitaciones - 1 baño con 400pies cuadrados. Acceso directo a la #1 y a pasos de PR-52. Llama HOY!! Edgar Acosta 787 645 2084
