--- a/_posts/2015-10-24-Salinas.markdown
+++ b/_posts/2015-10-24-Salinas.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Salinas"
+title:  "Salinas Lapas"
 date:   2015-10-24 15:39:40
 preview: /Propiedades/venta/Salinas/1.jpg
 ---
